Crawler-Commons Change Log

Release 0.5
- Issue 42: [Sitemaps] Add more JUnit tests (Avi Hayun via lewismc)
- Issue 37: Upgrade the Slf4j logging Library to v1.7.7 (avraham2 via kkrugler)
- Issue 41: Upgrade to JUnit v4 conventions in SiteMapParser
- Issue 34: Upgrade the Slf4j logging in SiteMaps

Release 0.4
- Issue 13: Fix deprecation in Crawler Commons Code (lewismc via kkrugler)
- Issue 8 : Upgrade of httpclient to v4.2.6 (Fuad Efendi, lewismc via kkrugler)
- Issue 18: Support matching against query parameters in robots.txt rules (alparslanavci, kkrugler)
- Issue 21: Follow Google example of giving Allow directives higher match weight than Disallow directives (y.vladimirov, via kkrugler)
- Issue 22: Use longest-match-wins approach to matching URLs in robots.txt (kkrugler)
- Issue 17: Support Googlebot-compatible regular expressions in URL specifications (alparslanavci. kkrugler)
- Issue 31: Missing top level domains (jnioche, kkrugler)
- Issue 23: Trivial improvements to UserAgent (lewismc)
- Issue 30: SitemapIndex should allow to skip sitemaps (Sebastian Nagel, kkrugler)
- cleanup of ANT build remnants [lib and lib-ext] (jnioche)

Release 0.3
- Upgraded to Tika 1.4 (jnioche)
- [SiteMap] added utility class for testing sitemaps (jnioche)
- Issue 16: remove ant scripts and configuration (lewismc)
- Issue 27: [SiteMap] Unnecessary String concatenations when logging + in SiteMapURL.toString() (jnioche)
- Issue 26: [SiteMap] Set correct default priority for URL in a sitemap file (jnioche)
- Issue 25: [Robots] Robots parser should not lowercase sitemap URLs (jnioche)
- Issue 29: [SiteMap] try urls when <loc> element is missing (jnioche)

Release 0.2
- Move to pure Maven for CC build lifecycle (lewismc)
- Move Javadoc out of core code (lewismc)
- Substantiate Javadoc (lewismc)
- Review default.properties (lewismc)
- add HTTP status code & reason to FetchedResult (Fuad Efendi via kkrugler)
- support for multiple user agent names (Tejas Patil via kkrugler)